--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vdom-virtualize",
+  "name": "@weddell/vdom-virtualize",
   "version": "2.0.0",
   "description": "Virtualize any DOM node and turn it into a virtual-dom node.",
   "main": "index.js",
